# clawpot

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.buildkite/: pipeline.yml
.buildkite/scripts/: build.sh  integration.sh  lint.sh
ci/: host-setup.sh  install_and_test.sh
ci/inner-vm/: build-image.sh  destroy.sh  launch.sh
ci/outer-vm/: cloud-init.yaml  provision.sh
clawpot-agent/: Cargo.toml  build.rs
clawpot-agent/src/: exec.rs  main.rs  service.rs  stream.rs
clawpot-cli/: Cargo.toml
clawpot-cli/src/: main.rs
clawpot-cli/src/commands/: create.rs  delete.rs  exec.rs  list.rs  logs.rs  mod.rs
clawpot-common/: Cargo.toml  build.rs
clawpot-common/src/: agent_proto.rs  lib.rs  network_auth_proto.rs  proto.rs  types.rs
clawpot-common/src/firecracker/: client.rs  config.rs  mod.rs  models.rs
clawpot-common/src/vm/: lifecycle.rs  manager.rs  mod.rs
clawpot-common/tests/: grpc_integration.rs
clawpot-driver/: Cargo.toml
clawpot-driver/src/: main.rs
clawpot-driver/src/firecracker/: client.rs  config.rs  models.rs
clawpot-driver/src/vm/: manager.rs
clawpot-server/: Cargo.toml
clawpot-server/src/: main.rs  telemetry.rs
clawpot-server/src/agent/: client.rs
clawpot-server/src/events/: mod.rs  store.rs  types.rs
clawpot-server/src/grpc/: mod.rs  service.rs
clawpot-server/src/network/: bridge.rs  ip_allocator.rs  iptables.rs  mod.rs  tap.rs
clawpot-server/src/proxy/: auth_client.rs  body_store.rs  ca.rs  db.rs  dns_proxy.rs  envoy.rs  http_proxy.rs  llm.rs  mod.rs  proxy_protocol.rs  tls_mitm.rs
clawpot-server/src/vm/: mod.rs  registry.rs
docs/design/: claude-code-vm-interface.md
proto/: clawpot.proto  clawpot_agent.proto  network_auth.proto
scripts/: clickhouse-schema.sql  install-vm-assets.sh  lint.sh  setup-rootfs.sh
tests/integration/: conftest.py  pyproject.toml  run.sh  test_e2e.py  test_llm.py
utils/: devvm  devvm.py  monitor_build.py
