[workspace]
members = [
    "clawpot-common",
    "clawpot-server",
    "clawpot-cli",
    "clawpot-agent",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tonic = "0.12"
prost = "0.13"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
