[workspace]
members = [
    "clawpot-common",
    "clawpot-server",
    "clawpot-cli",
    "clawpot-agent",
]
resolver = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Too noisy / not useful for this project
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
# Casts between numeric types are pervasive and safe in practice
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# These trigger on legitimate patterns
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
unnecessary_wraps = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tonic = "0.12"
prost = "0.13"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
