[package]
name = "clawpot-agent"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "clawpot-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-vsock = { version = "0.7", features = ["tonic012"] }
tokio-stream = "0.1"
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"
