[package]
name = "clawpot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clawpot"
path = "src/main.rs"

[dependencies]
clawpot-common = { path = "../clawpot-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tabled = "0.16"
