[package]
name = "clawpot-common"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = "1.0"
uuid = { workspace = true }
tracing = "0.1"
tonic = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio-stream = "0.1"
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
