[package]
name = "clawpot-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
