[package]
name = "clawpot-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clawpot-server"
path = "src/main.rs"

[dependencies]
clawpot-common = { path = "../clawpot-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
ipnetwork = "0.20"
bitvec = "1.0"
nix = { version = "0.29", features = ["user"] }
