[package]
name = "clawpot-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clawpot-server"
path = "src/main.rs"

[dependencies]
clawpot-common = { path = "../clawpot-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
ipnetwork = "0.20"
bitvec = "1.0"
nix = { version = "0.29", features = ["user"] }
hyper-util = "0.1"
tower = "0.4"
tokio-stream = "0.1"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
hyper = { version = "1.0", features = ["http1", "server", "client"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http1", "tls12", "ring", "native-tokio", "webpki-tokio"] }
serde_json = "1"
hickory-resolver = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
